--- a/.travis.yml
+++ b/.travis.yml
@@ -24,34 +24,42 @@ jobs:
     # split the do-it-all common.sh into separate scripts responsible
     # for different types of jobs below:
     - name: "Platformio (1)"
+      stage: build
       script: $TRAVIS_BUILD_DIR/tests/common.sh
       env:
         - BUILD_TYPE=platformio_even
     - name: "Platformio (2)"
+      stage: build
       script: $TRAVIS_BUILD_DIR/tests/common.sh
       env:
         - BUILD_TYPE=platformio_odd
     - name: "Build (1)"
+      stage: build
       script: $TRAVIS_BUILD_DIR/tests/common.sh
       env:
         - BUILD_TYPE=build_even
     - name: "Build (2)"
+      stage: build
       script: $TRAVIS_BUILD_DIR/tests/common.sh
       env:
         - BUILD_TYPE=build_odd
     - name: "Debug (1)"
+      stage: build
       script: $TRAVIS_BUILD_DIR/tests/common.sh
       env:
         - BUILD_TYPE=debug_even
     - name: "Debug (2)"
+      stage: build
       script: $TRAVIS_BUILD_DIR/tests/common.sh
       env:
         - BUILD_TYPE=debug_odd
     - name: "Build IPv6 (1)"
+      stage: build
       script: $TRAVIS_BUILD_DIR/tests/common.sh
       env:
         - BUILD_TYPE=build6_even
     - name: "Build IPv6 (2)"
+      stage: build
       script: $TRAVIS_BUILD_DIR/tests/common.sh
       env:
         - BUILD_TYPE=build6_odd
@@ -62,16 +70,19 @@ jobs:
       install: sudo apt-get install valgrind lcov
 
     - name: "Docs"
+      stage: build
       script: $TRAVIS_BUILD_DIR/tests/ci/build_docs.sh
       install:
           - sudo apt-get install python3-pip
           - pip3 install --user -r doc/requirements.txt;
 
     - name: "Style check"
+      stage: build
       script: $TRAVIS_BUILD_DIR/tests/ci/style_check.sh
       install: tests/ci/install_astyle.sh
 
     - name: "Boards"
+      stage: build
       script: $TRAVIS_BUILD_DIR/tests/ci/build_boards.sh
 
     # Deploy stage.
