--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "libraries/SoftwareSerial"]
 	path = libraries/SoftwareSerial
 	url = https://github.com/plerup/espsoftwareserial.git
+[submodule "tools/sdk/lwip2/builder"]
+	path = tools/sdk/lwip2/builder
+	url = https://github.com/SmartBlug/esp82xx-nonos-linklayer
