--- a/tests/astyle_core.conf
+++ b/tests/astyle_core.conf
@@ -5,12 +5,13 @@
 
 mode=c
 lineend=linux
+style=allman
 
 # 4 spaces indentation
 indent=spaces=4
 
 # also indent macros
-indent-preprocessor
+#indent-preprocessor
 
 # indent classes, switches (and cases), comments starting at column 1
 indent-col1-comments
@@ -24,9 +25,8 @@ pad-header
 # if you like one-liners, keep them
 keep-one-line-statements
 
-style=allman
 attach-closing-while
 unpad-paren
 pad-oper
 remove-comment-prefix
-remove-braces
+add-braces
