emulation on host: Add full UART driver emulation. (#5785)
* emulation on host: Add full UART driver emulation.

  This PR replaces the high level Serial mock with a more complete
  UART driver. This way the HardwareSerial works without any
  modifications. Additionally the driver supports UART0 and UART1
  at the same time (UART0 is directed to stdout and UART1 writes
  to stderr). RX is implemented by switching the terminal into raw
  non-blocking mode and injecting each key-press directly into the
  FIFO of UART0. A new command line switch -c was added to ignore
  CTRL-C and send it via serial as well. The decumentation was
  updated accordingly.

  Reading and setting of GPIOs does only write to stderr, when compiled
  with D=1. But this is subject to be replaced with a proper GPIO emu
  anyway. Reading from GPIO0 now returns 1 instead of 0 because this is
  most likely a low active input.

* Fixed unused variable.

* Remove unused functions, as long as there are no debug macros using them.

* Move user_interface.cc from MOCK_CPP_FILES_EMU to MOCK_CPP_FILES.

* Move optimistic_yield() from user_interface.cpp to Arduino.cpp

* Remove atexit() weak declaration (fixes segfault when calling atexit).

* Improve resetting of terminal after program exit, convert \r to \r\n.

* Show error, when STDOUT is not a TTY, minor code cleanung.

--- a/tests/host/Makefile
+++ b/tests/host/Makefile
@@ -65,6 +65,7 @@ CORE_CPP_FILES := $(addprefix $(CORE_PATH)/,\
 	libb64/cencode.cpp \
 	libb64/cdecode.cpp \
 	Schedule.cpp \
+	HardwareSerial.cpp \
 )
 
 CORE_C_FILES := $(addprefix $(CORE_PATH)/,\
@@ -74,7 +75,7 @@ MOCK_CPP_FILES_COMMON := $(addprefix common/,\
 	Arduino.cpp \
 	spiffs_mock.cpp \
 	WMath.cpp \
-	MockSerial.cpp \
+	MockUART.cpp \
 	MockTools.cpp \
 	MocklwIP.cpp \
 )
@@ -94,7 +95,6 @@ MOCK_C_FILES := $(addprefix common/,\
 	md5.c \
 	noniso.c \
 )
-
 
 INC_PATHS += $(addprefix -I, \
 	. \
@@ -231,7 +231,7 @@ ARDUINO_LIBS := \
 		WiFiServerSecureBearSSL.cpp \
 		BearSSLHelpers.cpp \
 		CertStoreBearSSL.cpp \
-	) \
+	)
 
 OPT_ARDUINO_LIBS ?= $(addprefix ../../libraries/,\
 	$(addprefix ESP8266WebServer/src/,\
@@ -251,7 +251,7 @@ OPT_ARDUINO_LIBS ?= $(addprefix ../../libraries/,\
 	DNSServer/src/DNSServer.cpp \
 	ESP8266AVRISP/src/ESP8266AVRISP.cpp \
 	ESP8266HTTPClient/src/ESP8266HTTPClient.cpp \
-) \
+)
 
 MOCK_ARDUINO_LIBS := $(addprefix common/,\
 	ClientContextSocket.cpp \
@@ -263,7 +263,7 @@ MOCK_ARDUINO_LIBS := $(addprefix common/,\
 	MockEsp.cpp \
 	MockEEPROM.cpp \
 	MockSPI.cpp \
-) \
+)
 
 CPP_SOURCES_CORE_EMU = \
 	$(MOCK_CPP_FILES_EMU) \
